# track-trucks

./: README.md  dev.sh
.github/workflows/: deploy.yml  develop.yml  python-tests.yml
backend/: .coveragerc  .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_all_checks.sh  run_tests_with_coverage.sh
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  drivers.py  trips.py  trucks.py
backend/app/controllers/: trips.py
backend/app/db/: trips.json
backend/app/managers/: trips.py
backend/app/tests/: README.md  conftest.py  mock_data.py  test_main.py  test_trips_controller.py  test_trips_endpoints.py  test_trips_manager.py  test_trucks.py
frontend/: .babelrc  .dockerignore  .env.example  .gitignore  Dockerfile  ENV_CONFIG.md  eslint.config.js  index.html  jest.config.mjs  jest.setup.js  package-lock.json  package.json  vite.config.js
frontend/src/__mocks__/: mockApiService.js  service.js
frontend/src/__tests__/: Directions.test.jsx  FitMap.test.jsx  README.md
frontend/src/components/: CardForm.jsx  Content.jsx  Dashboard.jsx  Directions.jsx  FitMap.jsx  Navbar.jsx
frontend/src/components/Cards/: CardForm.jsx  CardResult.jsx  ModalResult.jsx  ResultItem.jsx
frontend/src/utils/: map.js  polyline.jsx  service.js
infra/: docker-compose.override.yml  docker-compose.yml
